--- a/public/assets/css/corporate-ui-dashboard.css
+++ b/public/assets/css/corporate-ui-dashboard.css
@@ -22602,7 +22602,7 @@ hr.horizontal.gray-light {
 .navbar-vertical.navbar-expand-xs .navbar-collapse {
   display: block;
   overflow: auto;
-  height: calc(100vh - 300px);
+  height: 100vh;
 }
 
 .navbar-vertical.navbar-expand-xs>[class*="container"] {
