vista de proyectos

--- a/public/assets/css/projects-list.css
+++ b/public/assets/css/projects-list.css
@@ -74,7 +74,9 @@ h1.heading {
 }
 
 .card-content {
-    padding: 15px;
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
     text-align: left;
 }
 
